<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.strandls.biodiv</groupId>
	<artifactId>files</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<name>Biodiv Files API</name>
	<!-- FIXME change it to the project's web site -->
	<url>http://maven.apache.org</url>

	<properties>

		<!-- Code -->
		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
		<com.sun.jersey.version>1.19.4</com.sun.jersey.version>
		<com.google.inject.version>4.2.2</com.google.inject.version>

		<org.pac4j.version>3.7.0</org.pac4j.version>
		<jax-rs-pac4j.version>2.3.0</jax-rs-pac4j.version>
		<com.fasterxml.jackson>2.9.9</com.fasterxml.jackson>

		<postgresql.version>42.2.5</postgresql.version>
		<hibernate-core.version>5.4.1.Final</hibernate-core.version>

		<swagger.version>1.5.22</swagger.version>
		<swagger-ui.version>3.17.0</swagger-ui.version>

		<!-- Build plugins -->
		<java.version>1.8</java.version>
		<mvn-compiler-plugin.version>3.8.0</mvn-compiler-plugin.version>
		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
		<maven-war-plugin.version>3.2.2</maven-war-plugin.version>
		<replacer.version>1.5.3</replacer.version>
		<swagger-maven-plugin.version>3.1.1</swagger-maven-plugin.version>
		<exec-maven-plugin.version>1.3.2</exec-maven-plugin.version>
		<openapi-generator-cli.version>4.0.3</openapi-generator-cli.version>
		<!-- end Build plugins -->

		<!-- Project property -->
		<warName>files-api</warName>
		<srcDir>src/main/webapp</srcDir>
		<base-path>/files-api/api</base-path>
		<location>com.strandls.file</location>
	</properties>

	<distributionManagement>
		<repository>
			<id>central</id>
			<name>jfrog-releases</name>
			<url>http://pamba.strandls.com/artifactory/libs-release-local</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>jfrog-snapshots</name>
			<url>http://pamba.strandls.com/artifactory/libs-snapshot-local</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>http://pamba.strandls.com/artifactory/libs-release</url>
		</repository>
		<repository>
			<snapshots />
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>http://pamba.strandls.com/artifactory/libs-snapshot</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.servlet-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-server</artifactId>
			<version>${com.sun.jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-guice</artifactId>
			<version>${com.sun.jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-multipart</artifactId>
			<version>${com.sun.jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-client</artifactId>
			<version>${com.sun.jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>${com.google.inject.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject.extensions</groupId>
			<artifactId>guice-servlet</artifactId>
			<version>${com.google.inject.version}</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20090211</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate-core.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.pac4j</groupId>
			<artifactId>pac4j-core</artifactId>
			<version>${org.pac4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.pac4j</groupId>
			<artifactId>pac4j-jwt</artifactId>
			<version>${org.pac4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.pac4j</groupId>
			<artifactId>jax-rs-pac4j</artifactId>
			<version>${jax-rs-pac4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${com.fasterxml.jackson}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${com.fasterxml.jackson}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>${com.fasterxml.jackson}</version>
		</dependency>		
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-jaxrs</artifactId>
			<version>${swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-jersey-jaxrs</artifactId>
			<version>${swagger.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
		<dependency>
		    <groupId>org.apache.tika</groupId>
		    <artifactId>tika-core</artifactId>
		    <version>1.24</version>
		</dependency>		
		
		<dependency>
			<groupId>com.strandls.biodiv</groupId>
			<artifactId>authentication-utility</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>files-api</finalName>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${mvn-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<!-- Download Swagger UI webjar. -->
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version><!--$NO-MVN-MAN-VER$-->
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.webjars</groupId>
									<artifactId>swagger-ui</artifactId>
									<version>${swagger-ui.version}</version>
								</artifactItem>
							</artifactItems>
							<outputDirectory> ${project.build.directory}/swagger-ui</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
				<configuration>
					<webResources combine.children="append">
						<resource>
							<directory>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}</directory>
							<includes>
								<include>**/*.*</include>
							</includes>
							<targetPath>swagger-ui</targetPath>
						</resource>
					</webResources>
					<warName>${warName}</warName>
					<warSourceDirectory>${srcDir}</warSourceDirectory>
				</configuration>
			</plugin>

			<plugin>
				<!-- Replace the OpenAPI specification example URL with the local one. -->
				<groupId>com.google.code.maven-replacer-plugin</groupId>
				<artifactId>replacer</artifactId>
				<version>${replacer.version}</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>replace</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<file>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}/index.html</file>
					<replacements>
						<replacement>
							<token>http://petstore.swagger.io/v2/swagger.json</token>
							<value>../api/swagger.json</value>
						</replacement>
					</replacements>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.github.kongchen</groupId>
				<artifactId>swagger-maven-plugin</artifactId>
				<version>${swagger-maven-plugin.version}</version>
				<configuration>
					<apiSources>
						<apiSource>
							<springmvc>false</springmvc>
							<locations>
								${location}
							</locations>
							<schemes>http</schemes>
							<host>localhost:8080</host>
							<basePath>${base-path}</basePath>
							<info>
								<title>Swagger file generation</title>
								<version>v1</version>
							</info>
							<outputPath>${project.basedir}/target</outputPath>
							<outputFormats>json</outputFormats>
							<swaggerDirectory>${project.basedir}/target</swaggerDirectory>
						</apiSource>
					</apiSources>
				</configuration>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${exec-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<mainClass>org.openapitools.codegen.OpenAPIGenerator</mainClass>
					<commandlineArgs>
						generate -i ${project.basedir}/target/swagger.json -g java -o target/sdk --skip-validate-spec -c swagger-config.json
					</commandlineArgs>
					<includeProjectDependencies>true</includeProjectDependencies>
					<includePluginDependencies>true</includePluginDependencies>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openapitools</groupId>
						<artifactId>openapi-generator-cli</artifactId>
						<version>${openapi-generator-cli.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
